load("@rules_apko//apko:defs.bzl", "apko_image", "apko_lock")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "rootfs",
    srcs = ["//root"],
    package_dir = "/", # Destination directory in the image
)

apko_lock(
    name = "lock",
    config = "apko.yaml",
    lockfile_name = "apko.lock.json",
)

apko_image(
    name = "base",
    config = "apko.yaml",
    contents = "@ember_apko//:contents",
    tag = "latest",
    architecture = "amd64",
)

pkg_tar(
    name = "rke2_tar",
    srcs = ["@rke2//file"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "image",
    base = ":base",
    tars = [
        ":rootfs",
        ":rke2_tar",
    ],
    entrypoint = ["/init"],
    visibility = ["//visibility:public"],
)
